small style changes

--- a/static/index.html
+++ b/static/index.html
@@ -27,8 +27,12 @@
         <h2>Blocked Issues</h2>
         <div id="blocked_issue_cards" class="card-container">
           Loading...
-        <div>
-      </div>
+        </div>
+    </div>
+    <div>
+      <h2 class="title-label">
+        Pack 2 Sprint #19 - 09/23/16
+      </h2>
     </div>
   </div>
   <div>
