added loading screen

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div id="loader"></div>
+  <div id="loader">
+    <img src="svg/gears.svg" alt="Loading">
+    <div class="message">Loading...</div>
+  </div>
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
