added basic basic authentication

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,7 @@
   </div>
 <video autoplay="true" id="videoElement" class="draggable"></video>
 <script src="properties/urls.js"></script>
+<script src="js/authentication.js"></script>
 <script src="js/getUrlParameter.js"></script>
 <script src="js/webcam.js"></script>
 <script src="js/draggable.js"></script>
