--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Standup Dashboard</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +17,8 @@
 </head>
 <body>
   <div id="loader">
-    <img src="svg/gears.svg" alt="Loading">
+    <h1>DevOpsGuys Standup Dashboard</h1>
+    <img id="loading_image" src="https://pbs.twimg.com/profile_images/672098074995638272/Q6Oy0m4X.png" alt="Logo">
     <div class="message">Loading...</div>
   </div>
   <div class="container-fluid">
