Split out Blocked issues from With Customer

--- a/static/index.html
+++ b/static/index.html
@@ -30,9 +30,18 @@
         </div>
       </div>
       <div class="col-md-8">
-        <h2>Blocked Issues</h2>
-        <div id="blocked_issue_cards" class="card-container">
-          Loading...
+        <div class="row">
+          <h2>Blocked Issues</h2>
+          <div id="blocked_issue_cards" class="card-container">
+            Loading...
+          </div>
+        </div>
+        
+        <div class="row">
+          <h2>With Customer</h2>
+          <div id="with_customer_issue_cards" class="card-container">
+            Loading...
+          </div>
         </div>
     </div>
     <div>
