Look at last sprint's actions

--- a/static/index.html
+++ b/static/index.html
@@ -24,9 +24,17 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
-        <h2>Sprint Goals</h2>
-        <div id="sprint-goals">
-          Loading...
+        <div class="row">
+          <h2>Sprint Goals</h2>
+          <div id="sprint-goals">
+            Loading...
+          </div>
+        </div>
+        <div class="row">
+          <h2>Actions</h2>
+          <div id="sprint-actions">
+            Loading...
+          </div>
         </div>
       </div>
       <div class="col-md-8">
@@ -57,6 +65,7 @@
 <script src="js/draggable.js"></script>
 <script src="js/sprintGoals.js"></script>
 <script src="js/blockedIssues.js"></script>
+<script src="js/sprintActions.js"></script>
 <script src="js/titleLabel.js"></script>
 <script src="js/main.js"></script>
 
