Sprint goals and actions are in panels

--- a/static/board.html
+++ b/static/board.html
@@ -30,15 +30,23 @@
   <div class="container-fluid">
     <div class="col-md-4">
       <div class="row">
-        <h2>Sprint Goals</h2>
-        <div id="sprint-goals">
-          Loading...
+        <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Sprint Goals</h3>
+          </div>
+          <div id="sprint-goals" class="panel-body">
+            Loading...
+          </div>
         </div>
       </div>
       <div class="row">
-        <h2>Actions</h2>
-        <div id="sprint-actions">
-          Loading...
+        <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Actions</h3>
+          </div>
+          <div id="sprint-actions" class="panel-body">
+            Loading...
+          </div>
         </div>
       </div>
     </div>
