--- a/static/board.html
+++ b/static/board.html
@@ -19,6 +19,7 @@
   <script src="js/authentication.js"></script>
   <script src="js/api_setup.js"></script>
   <script src="js/getUrlParameter.js"></script>
+  <script> tryLoginFromStoredCredentials() </script>
 
 </head>
 <body>
@@ -49,6 +50,9 @@
           </div>
         </div>
       </div>
+
+            <video autoplay="true" id="webcam"></video>
+
     </div>
     <div class="col-md-8">
       <div class="row">
@@ -80,7 +84,7 @@
     <h2 id="title-label">
     </h2>
   </div>
-<video autoplay="true" id="videoElement" class="draggable"></video>
+
 
 <script src="js/webcam.js"></script>
 <script src="js/draggable.js"></script>
