maximise panels by clicking the header

--- a/static/board.html
+++ b/static/board.html
@@ -94,6 +94,7 @@
 <script src="js/blockedIssues.js"></script>
 <script src="js/sprintActions.js"></script>
 <script src="js/titleLabel.js"></script>
+<script src="js/maximise.js"></script>
 <script src="js/main.js"></script>
 
 </body>
