Update webcam style

--- a/static/board.html
+++ b/static/board.html
@@ -52,8 +52,12 @@
           </div>
         </div>
       </div>
+      
+      <div class="row">
+        <video autoplay="true" id="webcam"></video>
+      </div>
 
-            <video autoplay="true" id="webcam"></video>
+            
 
     </div>
     <div class="col-md-7">
