--- a/static/board.html
+++ b/static/board.html
@@ -32,6 +32,9 @@
   </div>
   <div class="container-fluid">
     <div class="col-md-5">
+      <div class="page-header">
+        <h2 id="title-label"></h2>
+      </div>
       <div class="row">
         <div id="panel-sprint-goals" class="panel panel-default">
           <div class="panel-heading">
@@ -86,10 +89,7 @@
         </div>
       </div>
   </div>
-  <div>
-    <h2 id="title-label">
-    </h2>
-  </div>
+  
 
 
 <script src="js/webcam.js"></script>
